cmake_minimum_required(VERSION 3.17)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode main.cpp BinarySearch/leetcode74.cpp common.h BinarySearch/leetcode275.cpp BinarySearch/leetcode530.cpp BinarySearch/leetcode378.cpp BinarySearch/leetcode3.cpp StringCode/leetcode5.cpp Tree/offer33.cpp BinarySearch/leetcode162.cpp Bit_operation/leetcode136.cpp Bit_operation/leetcode260.cpp SortCode/MergeSort.cpp SlidingWindow/offer59_I.cpp SlidingWindow/leetcode1438.cpp MonotonousStack/leetcode739.cpp MonotonousStack/leetcode84.cpp HeapCode/leetcode703.cpp Bit_operation/leetcode50.cpp TrieTree/TrieTree.cpp TrieTree/leetcode720.cpp TrieTree/leetcode648.cpp)